Split global fix; optional SM debugging;

Fix split global setter/getters: see https://bugzilla.mozilla.org/show_bug.cgi?id=542864

Support building TM with debugging turned on to configure. This changes
structure layout (!) so the same flags have to be passed when doing the
ext build.